# advent

./: .gitignore  Cargo.toml  README.md
2017/1/: 1.go  1_test.go  README.md
2017/2/: 2.go  2_test.go  README.md
2017/3/: 3.go  3_test.go  README.md
2020/: Cargo.toml  README.md
2020/scripts/: update-readme.sh
2020/src/: day1.rs  day10.rs  day11.rs  day12.rs  day13.rs  day14.rs  day15.rs  day16.rs  day17.rs  day18.rs  day19.rs  day2.rs  day20.rs  day21.rs  day22.rs  day23.rs  day24.rs  day25.rs  day3.rs  day4.rs  day5.rs  day6.rs  day7.rs  day8.rs  day9.rs  lib.rs  main.rs
2021/: Cargo.toml
2021/src/: day1.rs  day10.rs  day11.rs  day12.rs  day13.rs  day14.rs  day15.rs  day16.rs  day17.rs  day18.rs  day19.rs  day2.rs  day20.rs  day21.rs  day22.rs  day23.rs  day3.rs  day4.rs  day5.rs  day6.rs  day7.rs  day8.rs  day9.rs  lib.rs  main.rs  template.rs
2022/: Cargo.toml
2022/src/: day1.rs  day10.rs  day11.rs  day12.rs  day13.rs  day14.rs  day15.rs  day16.rs  day17.rs  day18.rs  day19.rs  day2.rs  day20.rs  day21.rs  day22.rs  day23.rs  day24.rs  day3.rs  day4.rs  day5.rs  day6.rs  day7.rs  day8.rs  day9.rs  dayN.rs  lib.rs  main.rs
2025/: :w  Cargo.toml
2025/src/: day1.rs  day10.rs  day11.rs  day12.rs  day2.rs  day3.rs  day4.rs  day5.rs  day6.rs  day7.rs  day8.rs  day9.rs  dayN.rs  lib.rs  main.rs
advent-common/: Cargo.toml
advent-common/src/: image.rs  lib.rs  parsers.rs
src/: image.rs  lib.rs  parsers.rs
