[package]
name = "advent2020"
version = "0.1.0"
authors = ["Bill Thiede <git@xinu.tv>"]
edition = "2018"
autobins = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.34"
aoc-runner = "0.3.0"
aoc-runner-derive = "0.3.0"
regex = "1.4.2"
[dev-dependencies]
pretty_assertions = "0.6"
