[package]
name = "advent2025"
version = "0.1.0"
edition = "2024"
autobins = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.66"
aoc-runner = "0.3.0"
aoc-runner-derive = "0.3.0"
advent = { path = "../advent-common" }
itertools = "0.14.0"
